<resources>
    <string name="app_name">bsShop</string>
    <string name="xin_chao">Xin chào!</string>
    <string name="pagkagename">com.example.shop49k</string>
    <string name="pagkagename_provider">com.example.shop49k.fileprovider</string>
    <string name="title_small_login">Chào mừng bạn đến với bsShop App,\n hãy đăng nhập để tiếp tục nhé!</string>
    <string name="hint_user_name">Nhập số điện thoại của bạn</string>
    <string name="hint_pass_word">Nhập mật khẩu của bạn</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_nhap_big">ĐĂNG NHẬP</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="dont_have_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up_small">Đăng ký</string>
    <string name="sign_up_info_person">Đăng ký thông tin cá nhân</string>
    <string name="please_done_form_person">Hãy hoàn tất các thông tin cá nhân của\nbạn để tiếp tục nhé.</string>
    <string name="of_49kshop_vn">của 49kshop.vn</string>
    <string name="provision">điều khoản</string>
    <string name="ok_with">Đồng ý với</string>
    <string name="your_name">Họ tên của bạn</string>
    <string name="citizen_id">Số CMND/CCCD</string>
    <string name="your_email">Email của bạn</string>
    <string name="new_pass_word">Mật khẩu mới</string>
    <string name="continue_big">TIẾP TỤC</string>
    <string name="sign_up_info_shop">Đăng ký thông tin cửa hàng</string>
    <string name="please_done_form_shop">Hãy hoàn tất các thông tin cửa hàng của\nbạn để tiếp tục nhé.</string>
    <string name="provice_and_city">Tỉnh/Thành phố</string>
    <string name="your_number_home_and_street">Số nhà, tên đường …</string>
    <string name="spn_bussiness_areas">Lĩnh vực kinh doanh</string>
    <string name="ward">Phường/Xã</string>
    <string name="district">Quận/Huyện</string>
    <string name="citizen_id_shop">Số đăng ký kinh doanh</string>
    <string name="your_name_shop">Tên shop</string>
    <string name="done_big">HOÀN TẤT</string>
    <string name="mshop_49k">49k.mShop</string>
    <string name="back_up_password">Lấy lại mật khẩu</string>
    <string name="please_done_form_forgot_password">Hãy nhập số điện thoại hoặc email để lấy\nlại mật khẩu nhé.</string>
    <string name="login_small">Đăng nhập</string>
    <string name="you_had_account">Bạn đã có tài khoản?</string>
    <string name="send_to_message">Gửi qua tin nhắn</string>
    <string name="send_to_email">Receive an email</string>
    <string name="get_otp_code">Nhận mã OTP</string>
    <string name="please_done_form_get_otp_code">Nhận mã OTP để xác nhận\nqua email hay số điện thoại.</string>
    <string name="confirm_otp">Xác minh OTP</string>
    <string name="please_done_form_confirm_otp">Vui lòng nhập mã OTP đã gửi tới số điện\nthoại hoặc email của bạn để tiếp
        tục.
    </string>
    <string name="confirm_big">XÁC MINH</string>
    <string name="you_dont_had_otp">Bạn không nhận được OTP?</string>
    <string name="resend_small">Gửi lại</string>
    <string name="confirmed_big">XÁC NHẬN</string>
    <string name="please_done_form_new_pass_word">Nhập mật khẩu mới để tiếp tục.</string>
    <string name="sign_up_account">Đăng ký tài khoản</string>
    <string name="please_done_form_sign_up_account">Hãy nhập số điện thoại hoặc email của bạn để đăng ký ngay nhé.
    </string>
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="offer">Campain</string>
    <string name="create_new">Tạo mới</string>
    <string name="account">Cá nhân</string>
    <string name="sale">Ưu đãi</string>
    <string name="title_small_success_signup">Hãy tạo ngay ưu đãi mới để\ntăng danh thu bán hàng\nnhanh chóng.</string>
    <string name="title_success_signup">Hoàn tất đăng ký</string>
    <string name="title_success_otp">Gửi thành công</string>
    <string name="title_small_success_otp">Bây giờ, bạn có thể đăng nhập\nbằng mật khẩu mới mà chúng tôi đã\ngửi cho bạn
    </string>
    <string name="manage_offers">Quản lý campains</string>
    <string name="check_qr_code">Quét QR code</string>
    <string name="order">Đơn hàng</string>
    <string name="customer">Khách hàng</string>
    <string name="offers">Campains</string>
    <string name="count_view">Lượt xem</string>
    <string name="sales_statistics">Thống kê bán hàng</string>
    <string name="this_month_">Tháng này:</string>
    <string name="repeat_5_minute_ago">Cập nhật 5’ trước</string>
    <string name="recent_orders">Đơn hàng gần đây</string>
    <string name="view_all">Xem tất cả</string>
    <string name="who_are_you">Bạn là ai?</string>
    <string name="please_done_form_who_are_you">Hãy lựa chọn để chúng tôi sẽ có những\nưu đãi hấp dẫn phù hợp với bạn
        nhất.
    </string>
    <string name="merchant">Merchant</string>
    <string name="merchant_vi">Chủ kinh doanh</string>
    <string name="shipper">Shipper</string>
    <string name="shipper_vi">Người vận chuyển</string>
    <string name="sale_detail">Chi tiết ưu đãi</string>
    <string name="manage_offer">Quản lý campain</string>
    <string name="all">Tất cả</string>
    <string name="pending">Chờ duyệt</string>
    <string name="running">Đang chạy</string>
    <string name="finish">Kết thúc</string>
    <string name="cancel">Huỷ</string>
    <string name="select_offer">Chọn lọc campain</string>
    <string name="newest">Mới nhất</string>
    <string name="by_name">Theo tên</string>
    <string name="left_offer_count">Số campain còn lại</string>
    <string name="add_place">Thêm địa chỉ</string>
    <string name="using">Cách sử dụng</string>
    <string name="conditions_apply">Điều kiện áp dụng</string>
    <string name="view_more">Xem thêm</string>
    <string name="offer_type">Loại campain</string>
    <string name="delete">Xoá bỏ</string>
    <string name="edit">Sửa</string>
    <string name="show_less">Thu gọn</string>
    <string name="delete_offer">Xoá campain</string>
    <string name="delete_offer_confirm">Bạn có chắc muốn xoá campain\nnày không?</string>
    <string name="cancel_big">HUỶ BỎ</string>
    <string name="delete_offer_big">XOÁ CAMPAIN</string>
    <string name="edit_offer">Chỉnh sửa campain</string>
    <string name="save">Lưu lại</string>
    <string name="upload">Tải lên</string>
    <string name="image">Hình ảnh</string>
    <string name="add_title_offer">Nhập tiêu đề campain</string>
    <string name="offer_title">Tiêu đề campain</string>
    <string name="title_offer_detail">50-60 ký tự</string>
    <string name="time_use">Thời gian áp dụng</string>
    <string name="from">Từ</string>
    <string name="to">Tới</string>
    <string name="guide_use">Cách sử dụng</string>
    <string name="guide_use_detail">100-300 ký tự</string>
    <string name="add_info">Nhập thông tin</string>
    <string name="conditions_apply_offer_detail">100-300 ký tự</string>
    <string name="select">Lựa chọn</string>
    <string name="offer_count">Số lượng campain</string>
    <string name="status">Trạng thái</string>
    <string name="cover_image">Ảnh bìa</string>
    <string name="drap">Nháp</string>
    <string name="fashion">Thời trang</string>
    <string name="service">Dịch vụ</string>
    <string name="capture">Chụp Ảnh</string>
    <string name="get_from_gallery">Chọn Ảnh</string>
    <string name="create_offer">Tạo mới campain</string>
    <string name="checked">Đã xác minh</string>
    <string name="profile_info">Thông tin cá nhân</string>
    <string name="view_detail">Chi tiết</string>
    <string name="shop_info">Thông tin cửa hàng</string>
    <string name="password_and_security"><![CDATA[Mật khẩu & bảo mật]]></string>
    <string name="setting">Setting</string>
    <string name="frequently_quesion">Câu hỏi thường gặp</string>
    <string name="terms_and_conditions"><![CDATA[Quy định & điều khoản]]></string>
    <string name="contact_info">Thông tin liên hệ</string>
    <string name="for_us">Về chúng tôi</string>
    <string name="bussiness_image">Hình ảnh kinh doanh</string>
    <string name="delete_image">Xoá hình ảnh</string>
    <string name="delete_image_confirm">Bạn có chắc muốn xoá hình\nảnh kinh doanh này không?</string>
    <string name="delete_image_big">XOÁ ẢNH</string>
    <string name="full_name">Họ tên</string>
    <string name="info">Thông tin</string>
    <string name="hint_full_name">Nhập họ và tên</string>
    <string name="birthday">Sinh ngày</string>
    <string name="sex">Giới tính</string>
    <string name="select_sex">Nam/nữ/khác</string>
    <string name="hint_citized_id">Nhập cmnd/cccd</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="select_provice_and_city">Chọn Tỉnh/Thành Phố</string>
    <string name="select_district">Chọn Quận/Huyện</string>
    <string name="select_ward">Chọn Phường/Xã</string>
    <string name="select_address">Số nhà, tên đường, tên khu vực</string>
    <string name="address">Địa chỉ</string>
    <string name="add_before_citizen_image">Mặt trước CMND/CCCD</string>
    <string name="add_behind_citizen_image">Mặt sau CMND/CCCD</string>
    <string name="male">Nam</string>
    <string name="remale">Nữ</string>
    <string name="other">Khác</string>
    <string name="shop_name">Tên cửa hàng</string>
    <string name="founding_day">Ngày thành lập</string>
    <string name="bussiness_number">Số đăng ký kinh doanh</string>
    <string name="introduce">Giới thiệu</string>
    <string name="career">Nghành nghề</string>
    <string name="hint_shop_info">Nhập thông tin cửa hàng</string>
    <string name="hint_founding_day">Nhập ngày thành lập</string>
    <string name="hint_bussiness_number">Nhập ĐKKD</string>
    <string name="hint_introduce">Nhập giới thiệu</string>
    <string name="hint_address">Nhập địa chỉ</string>
    <string name="hint_career">Nhập ngành nghề</string>
    <string name="hint_birthday">Nhập ngày sinh</string>
    <string name="hint_phone_number">Nhập số điện thoại</string>
    <string name="hint_email">Nhập email</string>
    <string name="setting_vi">Cài đặt</string>
    <string name="password">Mật khẩu</string>
    <string name="change">Thay đổi</string>
    <string name="security">Bảo mật</string>
    <string name="touch_id_face_id">Touch ID, face ID…</string>
    <string name="notification">Thông báo</string>
    <string name="log_out_big">LOG OUT</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="please_done_form_change_pass_word">Nhập mật khẩu cũ để xác minh,\nchúng tôi sẽ giúp bạn đổi mật khẩu.
    </string>
    <string name="back_big">QUAY LẠI</string>
    <string name="input_old_password">Nhập mật khẩu cũ</string>
    <string name="please_done_form_new_pass_word_dialog">Nhập mật khẩu mới và xác nhận\nmật khẩu để tiếp tục.</string>
    <string name="input_confirm_password">Xác nhận mật khẩu</string>
    <string name="contact_support_phone">Tổng đài CSKH</string>
    <string name="contact_vi">Thông tin liên hệ</string>
    <string name="shipping">Đang ship</string>
    <string name="shipped">Đã ship</string>
    <string name="return_product">Hoàn hàng</string>
    <string name="manage_order">Quản lý đơn hàng</string>
    <string name="select_order">Chọn lọc sản phẩm</string>
    <string name="bank_account">Số tài khoản</string>
    <string name="input_bank_account">Nhập số tài khoản</string>
    <string name="bank">Ngân hàng</string>
    <string name="select_bank">Chọn ngân hàng</string>
    <string name="canceled">Đã huỷ</string>
    <string name="order_id">Mã đơn hàng</string>
    <string name="view_order_id">Xem mã giao hàng</string>
    <string name="order_status">Trạng thái đơn hàng</string>
    <string name="order_date">Ngày đặt hàng</string>
    <string name="order_date_">Ngày đặt hàng :</string>
    <string name="ship_status_">Trạng thái giao hàng :</string>
    <string name="customer_info">Thông tin người nhận</string>
    <string name="hint_otp_confirm">Nhập mã khôi phục mật khẩu</string>
</resources>