<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/trans_black_80">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:padding="@dimen/_10sdp"
                  android:gravity="center_vertical"
                  android:background="@drawable/custom_dialog_botton_offer"
                  android:layout_alignParentBottom="true"
    >

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/offer_type"
                  android:textSize="@dimen/_11sdp"
                  android:textColor="@color/text_black"
                  android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"/>
        <RadioGroup
                android:id="@+id/rdg_select_type_offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

            <RadioButton
                    android:id="@+id/rdb_fashion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/fashion"/>

            <RadioButton
                    android:id="@+id/rdb_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/service"/>

        </RadioGroup>
    </LinearLayout></RelativeLayout>