<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_marginLeft="@dimen/_30sdp"
                      android:layout_marginRight="@dimen/_30sdp"
                      android:orientation="vertical">


            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/back_up_password"
                      android:textColor="@color/text_black"
                      android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
                      android:gravity="top"
                      android:textSize="@dimen/_14sdp"
                      android:paddingBottom="@dimen/_3sdp"
                      android:layout_marginTop="@dimen/_50sdp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/please_done_form_forgot_password"
                      android:textColor="@color/text_hide"
                      android:gravity="center_vertical"
                      android:textSize="@dimen/_11sdp"
                      android:layout_marginBottom="@dimen/_30sdp"
            />

            <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/custom_edittext_login">

                <EditText android:layout_width="match_parent" android:layout_height="match_parent"
                          android:background="@drawable/custom_edittext_login"
                          android:textSize="@dimen/_10sdp"
                          android:hint="@string/hint_user_name"
                          android:textColor="@color/text_black"
                          android:textColorHint="@color/text_hide"
                          android:paddingLeft="@dimen/_10sdp"
                          android:paddingRight="@dimen/_5sdp"
                          android:id="@+id/edt_user_name_forgot_pass"
                android:layout_toLeftOf="@+id/img_show_pass_forgot_pass"/>

                <ImageView android:layout_width="@dimen/_16sdp" android:layout_height="@dimen/_16sdp"
                           android:src="@drawable/ic_uncheck"
                           android:layout_centerVertical="true"
                           android:layout_alignParentRight="true"
                           android:layout_marginRight="@dimen/_15sdp"
                           android:id="@+id/img_show_pass_forgot_pass"
                android:visibility="gone"/>
            </RelativeLayout>
            <TextView android:layout_width="match_parent" android:layout_height="@dimen/_40sdp"
                      android:background="@drawable/custom_button_login"
                      android:id="@+id/txt_continue_forgot_pass"
                      android:text="@string/continue_big"
                      android:textColor="@color/white"
                      android:gravity="center"
                      android:textSize="@dimen/_11sdp"
                      android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
                      android:layout_marginTop="@dimen/_20sdp"/>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_25sdp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/you_had_account"
                          android:textSize="@dimen/_11sdp"
                          android:textColor="@color/text_black"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/login_small"
                          android:textSize="@dimen/_11sdp"
                          android:textColor="@color/text_forgot_pass"                           android:fontFamily="@font/montserrat_medium"
                          android:id="@+id/txt_back_to_login"
                          android:layout_marginLeft="@dimen/_3sdp"
                />
            </LinearLayout>
        </LinearLayout>

        <ImageView android:layout_width="@dimen/_20sdp" android:layout_height="@dimen/_20sdp"
                   android:src="@drawable/ic_back"
                   android:id="@+id/img_back_forgot_pass"
                   android:layout_marginTop="@dimen/_15sdp"
                   android:layout_marginBottom="@dimen/_20sdp"
                   android:layout_marginLeft="@dimen/_20sdp"/>
    </RelativeLayout>

</ScrollView>