<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
android:background="@drawable/custom_edittext_login_dialog"
android:padding="@dimen/_20sdp"
                android:layout_margin="@dimen/_20sdp">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
                  >

        <RelativeLayout android:layout_width="@dimen/_40sdp" android:layout_height="@dimen/_40sdp"
        android:background="@drawable/custom_text_circle_orange"
        android:layout_gravity="center_horizontal"
        >
            <ImageView android:layout_width="@dimen/_20sdp" android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_trash"
            android:layout_centerInParent="true"/>
        </RelativeLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete_image"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/text_black"
        android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="@dimen/_10sdp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/delete_image_confirm"
                  android:textSize="@dimen/_11sdp"
                  android:textColor="@color/text_black"
                  android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"/>

        <TextView android:layout_width="match_parent" android:layout_height="@dimen/_35sdp"
        android:text="@string/cancel_big"
        android:id="@+id/txt_cancel_delete_image"
        android:background="@drawable/custom_status_offer_item_water_blue"
        android:gravity="center"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"/>
        <TextView android:layout_width="match_parent" android:layout_height="@dimen/_35sdp"
                  android:text="@string/delete_image_big"
                  android:id="@+id/txt_ok_delete_image"
                  android:gravity="center"
                  android:textSize="@dimen/_11sdp"
                  android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
                  android:textColor="@color/button_login"
                  android:layout_marginTop="@dimen/_5sdp"/>
    </LinearLayout>

</RelativeLayout></RelativeLayout>