<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:focusable="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_marginLeft="@dimen/_30sdp"
                      android:layout_marginRight="@dimen/_30sdp"
                      android:orientation="vertical">


            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/confirm_otp"
                      android:textColor="@color/text_black"
                      android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
                      android:gravity="top"
                      android:textSize="@dimen/_14sdp"
                      android:paddingBottom="@dimen/_3sdp"
                      android:layout_marginTop="@dimen/_50sdp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/please_done_form_confirm_otp"
                      android:textColor="@color/text_hide"
                      android:gravity="center_vertical"
                      android:textSize="@dimen/_11sdp"
                      android:layout_marginBottom="@dimen/_30sdp"
            />


            <!--<com.mukesh.OtpView-->
                    <!--android:id="@+id/otp_view"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="number"-->
                    <!--android:textColor="@color/text_black"-->
                    <!--app:hideLineWhenFilled="true"-->
                    <!--app:itemCount="6"-->
                    <!--app:itemSpacing="@dimen/_5sdp"-->
                    <!--app:lineColor="@color/line_otp_disable"-->
                    <!--app:cursorColor="@color/button_login"-->
                    <!--app:itemHeight="@dimen/_30sdp"-->
                    <!--app:itemWidth="@dimen/_30sdp"-->
                    <!--app:state_filled="true"-->
                    <!--app:viewType="line"-->
                    <!--android:gravity="center"-->
                    <!--android:layout_gravity="center"-->

            <!--/>-->
            <EditText android:layout_width="match_parent" android:layout_height="match_parent"
                      android:background="@drawable/custom_edittext_login"
                      android:textSize="@dimen/_10sdp"
                      android:hint="@string/hint_otp_confirm"
                      android:textColor="@color/text_black"
                      android:textColorHint="@color/text_hide"
                      android:padding="@dimen/_10sdp"
                      android:id="@+id/otp_view"
                      android:layout_gravity="center"/>

            <TextView android:layout_width="match_parent" android:layout_height="@dimen/_40sdp"
                      android:background="@drawable/custom_button_login"
                      android:id="@+id/txt_confirm"
                      android:text="@string/confirm_big"
                      android:textColor="@color/white"
                      android:gravity="center"
                      android:textSize="@dimen/_11sdp"
                      android:textStyle="bold"                       android:fontFamily="@font/montserrat_bold"
                      android:layout_marginTop="@dimen/_20sdp"/>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center_horizontal"
                          android:layout_marginTop="@dimen/_25sdp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/you_dont_had_otp"
                          android:textSize="@dimen/_11sdp"
                          android:textColor="@color/text_black"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/resend_small"
                          android:textSize="@dimen/_11sdp"
                          android:textColor="@color/text_forgot_pass"                           android:fontFamily="@font/montserrat_medium"
                          android:id="@+id/txt_resend_otp"
                          android:layout_marginLeft="@dimen/_3sdp"
                />
            </LinearLayout>
        </LinearLayout>

        <ImageView android:layout_width="@dimen/_20sdp" android:layout_height="@dimen/_20sdp"
                   android:src="@drawable/ic_back"
                   android:id="@+id/img_back_confirm_otp"
                   android:layout_marginTop="@dimen/_15sdp"
                   android:layout_marginLeft="@dimen/_20sdp"/>
    </RelativeLayout>

</ScrollView>